// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerChannels component should display all passed channels (including last seen on chat 36 minutes ago) because the user clicked on "show more" 1`] = `
<CustomerInfoWrapper>
  <div>
    <div
      className="customerChannel"
      key=".0:$0"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          email
        </i>
      </SourceIcon>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-1"
      >
        foo@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-1"
      >
        <i
          className="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-0"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-0"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-0"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-0"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key=".0:$1"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          email
        </i>
      </SourceIcon>
      <a
        href="mailto:bar@gorgias.io"
        id="address-copied-2"
      >
        bar@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-2"
      >
        <i
          className="material-icons"
          id="copy-icon-1"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-1"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-1"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-1"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-1"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <ForwardRef
      className="container"
      intent="secondary"
      onClick={[Function]}
    >
      <BaseButton
        className="container"
        intent="secondary"
      >
        <button
          className="wrapper container fill secondary medium"
          onClick={[Function]}
          type="button"
        >
          <ButtonIconLabel
            icon="keyboard_double_arrow_down"
          >
            <span
              className="wrapper"
            >
              <Icon
                className="icon isLeft"
              >
                <i
                  className="material-icons icon isLeft medium"
                >
                  keyboard_double_arrow_down
                </i>
              </Icon>
              More info
            </span>
          </ButtonIconLabel>
        </button>
      </BaseButton>
    </ForwardRef>
  </div>
</CustomerInfoWrapper>
`;

exports[`CustomerChannels component should display all passed channels (including last seen on chat 36 minutes ago) because the user clicked on "show more" 2`] = `
<CustomerInfoWrapper>
  <div>
    <div
      className="customerChannel"
      key="0"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          email
        </i>
      </SourceIcon>
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-1"
      >
        foo@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-1"
      >
        <i
          className="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-0"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-0"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-0"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-0"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="1"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          email
        </i>
      </SourceIcon>
      <a
        href="mailto:bar@gorgias.io"
        id="address-copied-2"
      >
        bar@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-2"
      >
        <i
          className="material-icons"
          id="copy-icon-1"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-1"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-1"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-1"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-1"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="2"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          email
        </i>
      </SourceIcon>
      <a
        href="mailto:baz@gorgias.io"
        id="address-copied-3"
      >
        baz@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-3"
      >
        <i
          className="material-icons"
          id="copy-icon-2"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-2"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-2"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-2"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-2"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="3"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="phone"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          phone
        </i>
      </SourceIcon>
      <ClickablePhoneNumber
        address="+15551238523"
        customerName="Foo"
        id="address-copied-4"
      >
        <a
          href="tel:+15551238523"
          id="address-copied-4"
        >
          +15551238523
        </a>
      </ClickablePhoneNumber>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-4"
      >
        <i
          className="material-icons"
          id="copy-icon-3"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-3"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-3"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-3"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-3"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="4"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="phone"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          phone
        </i>
      </SourceIcon>
      <ClickablePhoneNumber
        address="+15554567852"
        customerName="Foo"
        id="address-copied-5"
      >
        <a
          href="tel:+15554567852"
          id="address-copied-5"
        >
          +15554567852
        </a>
      </ClickablePhoneNumber>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-5"
      >
        <i
          className="material-icons"
          id="copy-icon-4"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-4"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-4"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-4"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-4"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="5"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="phone"
      >
        <i
          className="icon d-inline-block material-icons uncolored mr-2"
        >
          phone
        </i>
      </SourceIcon>
      <ClickablePhoneNumber
        address="+15557899632"
        customerName="Foo"
        id="address-copied-6"
      >
        <a
          href="tel:+15557899632"
          id="address-copied-6"
        >
          +15557899632
        </a>
      </ClickablePhoneNumber>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-6"
      >
        <i
          className="material-icons"
          id="copy-icon-5"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-5"
        >
          <UncontrolledTooltip
            className="tooltip"
            delay={
              Object {
                "hide": 0,
                "show": 1000,
              }
            }
            placement="top"
            target="copy-icon-5"
          >
            <Tooltip
              autohide={true}
              className="tooltip"
              delay={
                Object {
                  "hide": 0,
                  "show": 1000,
                }
              }
              isOpen={false}
              placement="top"
              placementPrefix="bs-tooltip"
              target="copy-icon-5"
              toggle={[Function]}
              trigger="hover focus"
            >
              <TooltipPopoverWrapper
                autohide={true}
                className="tooltip"
                delay={
                  Object {
                    "hide": 0,
                    "show": 1000,
                  }
                }
                fade={true}
                hideArrow={false}
                innerClassName="tooltip-inner"
                isOpen={false}
                placement="top"
                placementPrefix="bs-tooltip"
                popperClassName="tooltip show"
                target="copy-icon-5"
                toggle={[Function]}
                trigger="hover focus"
              />
            </Tooltip>
          </UncontrolledTooltip>
        </Tooltip>
      </span>
    </div>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 14:00
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        event
      </i>
      Last seen on chat: 36 minutes ago
    </p>
    <ForwardRef
      className="container"
      intent="secondary"
      onClick={[Function]}
    >
      <BaseButton
        className="container"
        intent="secondary"
      >
        <button
          className="wrapper container fill secondary medium"
          onClick={[Function]}
          type="button"
        >
          <ButtonIconLabel
            icon="keyboard_double_arrow_up"
          >
            <span
              className="wrapper"
            >
              <Icon
                className="icon isLeft"
              >
                <i
                  className="material-icons icon isLeft medium"
                >
                  keyboard_double_arrow_up
                </i>
              </Icon>
              Less info
            </span>
          </ButtonIconLabel>
        </button>
      </BaseButton>
    </ForwardRef>
  </div>
</CustomerInfoWrapper>
`;

exports[`CustomerChannels component should display all passed channels and not display the button "show more" because there is only 1 passed channel 1`] = `
<Fragment>
  <CustomerInfoWrapper>
    <div
      className="customerChannel"
      key="0"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      />
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-0"
        >
          Copy
        </Tooltip>
      </span>
    </div>
  </CustomerInfoWrapper>
</Fragment>
`;

exports[`CustomerChannels component should display all passed channels and not display the button "show more" because there is only 2 passed location channel and local time channel 1`] = `
<Fragment>
  <CustomerInfoWrapper>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </CustomerInfoWrapper>
</Fragment>
`;

exports[`CustomerChannels component should display all passed channels and not display the button "show more" because there is only 2 passed location channel and local time channel 2`] = `
<Fragment>
  <CustomerInfoWrapper>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </CustomerInfoWrapper>
</Fragment>
`;

exports[`CustomerChannels component should display first few passed channels and the button "show more" because there are more channels than those displayed 1`] = `
<Fragment>
  <CustomerInfoWrapper>
    <div
      className="customerChannel"
      key="0"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      />
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-0"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="1"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      />
      <a
        href="mailto:bar@gorgias.io"
        id="address-copied-undefined"
      >
        bar@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-1"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-1"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="2"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      />
      <a
        href="mailto:baz@gorgias.io"
        id="address-copied-undefined"
      >
        baz@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-2"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-2"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="3"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="phone"
      />
      <ClickablePhoneNumber
        address="+15551238523"
        customerName="Foo"
        id="address-copied-undefined"
      />
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-3"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-3"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="4"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="phone"
      />
      <ClickablePhoneNumber
        address="+15554567852"
        customerName="Foo"
        id="address-copied-undefined"
      />
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-4"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-4"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <div
      className="customerChannel"
      key="5"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="phone"
      />
      <ClickablePhoneNumber
        address="+15557899632"
        customerName="Foo"
        id="address-copied-undefined"
      />
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-5"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-5"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </CustomerInfoWrapper>
</Fragment>
`;

exports[`CustomerChannels component should display the email channel and the local time channel and then display the button "show more" because there are more channels than those displayed 1`] = `
<Fragment>
  <CustomerInfoWrapper>
    <div
      className="customerChannel"
      key="0"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      />
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-0"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: Paris, France
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </CustomerInfoWrapper>
</Fragment>
`;

exports[`CustomerChannels component should display the email channel and the local time channel and then display the button "show more" because there are more channels than those displayed 2`] = `
<Fragment>
  <CustomerInfoWrapper>
    <div
      className="customerChannel"
      key="0"
    >
      <SourceIcon
        className="uncolored mr-2"
        type="email"
      />
      <a
        href="mailto:foo@gorgias.io"
        id="address-copied-undefined"
      >
        foo@gorgias.io
      </a>
      <span
        className="copyAddress ml-2 js-clipboard-copy"
        data-clipboard-target="#address-copied-undefined"
      >
        <i
          className="material-icons"
          id="copy-icon-0"
        >
          content_copy
        </i>
        <Tooltip
          delay={
            Object {
              "hide": 0,
              "show": 1000,
            }
          }
          placement="top"
          target="copy-icon-0"
        >
          Copy
        </Tooltip>
      </span>
    </div>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        language
      </i>
      Location: France
    </p>
    <p
      className="customerChannel"
    >
      <i
        className="icon d-inline-block material-icons uncolored mr-2"
      >
        access_time
      </i>
      Local time: 13:34
    </p>
  </CustomerInfoWrapper>
</Fragment>
`;
